--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,3 +3,7 @@
 <h3>Title: <%= @article.title %></h3>
 
 <p>Description: <%= @article.description %></p>
+
+<p><%= link_to "Edit", edit_article_path(@article) %></p>
+<p><%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %></p>
+<p><%= link_to "Return to articles page", articles_path %></p>
