Add article validations and error messages

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,7 @@
 <h1>All articles</h1>
 
+<h2><%= link_to "Create a new article", new_article_path %></h2>
+
 <table>
   <th>Title</th>
   <th>Description</th>
