--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,25 +1,3 @@
 <h1>Create new article</h1>
 
-<% if @article.errors.any? %>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_for @article do |f| %>
-  <div class="form-group">
-    <%= f.label :title %> <br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="form-group">
-    <%= f.label :description %> <br>
-    <%= f.text_area :description %>
-  </div>
-  <div>
-    <%= f.submit %>
-  </div>
-<% end %>
-
-<p><%= link_to "Return to articles page", articles_path %></p>
+<%= render 'form' %>
