Add styling to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+  <div class="jumbotron center">
+    <div class="container-fluid">
+    <h1>Welcome to Alphablog</h1>
+    <p>The place where the world meets</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign up</a></p>
+  </div>
+</div>
