--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,20 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/* GENERAL */
+.center {
+  text-align: center;
+}
+
+body {
+  margin-top: 50px;
+}
+/* NAVBAR */
+
+/* JUMBOTRON */
+.jumbotron {
+  background-image: url('bg.png');
+  background-size: cover;
+  height: 750px;
+  padding-top: 200px;
+}
