Add styling to show page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,4 +17,11 @@ body {
   background-size: cover;
   height: 750px;
   padding-top: 200px;
+  margin-top: -50px;
+}
+
+/* SHOW PAGE */
+.article-actions {
+  border-top: 1px solid #EAEAEA;
+  padding-top: 10px;
 }
