--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,17 +1,18 @@
-<h1>All articles</h1>
-
-<h2><%= link_to "Create a new article", new_article_path %></h2>
-
-<table>
-  <th>Title</th>
-  <th>Description</th>
-  <% @articles.each do |article| %>
-  <tr>
-    <td><%= article.title %></td>
-    <td><%= article.description %></td>
-    <td><%= link_to "Show", article_path(article) %></td>
-    <td><%= link_to "Edit", edit_article_path(article) %></td>
-    <td><%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" } %></td>
-  </tr>
-  <% end %>
-</table>
+<h1 align="center">All articles</h1>
+<div class="row">
+  <div class="container">
+    <div class="col-md-8 col-md-offset-2">
+    <% @articles.each do |article| %>
+     <div class="well">
+       <h3><%= link_to article.title, article_path(article) %></h3>
+       <p class="lead"><%= truncate(article.description, length: 100) %></p>
+       <div class="article-actions">
+         <p><%= link_to "Edit", edit_article_path(article), class:"btn btn-primary btn-xs" %>
+         <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" },
+         class:"btn btn-danger btn-xs" %>
+       </div>
+     </div>
+     <% end %>
+   </div>
+  </div>
+</div>
