Add errors partial styling

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,10 +1,22 @@
-<% if obj.errors.any? %>
-  <ul>
-    <% obj.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
+<div class="container">
+  <div class="col-sm-8 col-sm-offset-2">
+    <% if obj.errors.any? %>
+    <div class="panel panel-danger">
+      <div class="panel-heading">
+        <div class="panel-body">
+          <h3><%= pluralize(obj.errors.count, "error") %> prevented the article from being saved:</h3>
+            <ul>
+              <% obj.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+              <% end %>
+            </ul>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </ul>
-<% end %>
+  </div>
+</div>
+
 
 <%= form_for(obj, :html => { class: "form-horizontal", role:"form" }) do |f| %>
 <div class="row">
