--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -43,7 +43,7 @@
       <%= f.label :password %>
     </div>
     <div class="col-sm-8">
-      <%= f.password_field :email, class:"form-control", placeholder: "Enter password", autofocus: true %>
+      <%= f.password_field :password, class:"form-control", placeholder: "Enter password", autofocus: true %>
     </div>
   </div>
 
