--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,11 @@
    <div class="col-sm-8 col-sm-offset-2">
      <div class="well">
        <p class="lead">Description: <br> <%= @article.description %></p>
+       <div class="article-meta-details">
+         <small>Created by: <%= @article.user.username %>
+          about <%= time_ago_in_words(@article.created_at) %> ago,
+         last updated: <%= time_ago_in_words(@article.updated_at) %> ago</small>
+       </div>
        <div class="article-actions">
          <p><%= link_to "Edit", edit_article_path(@article), class:"btn btn-primary btn-xs" %>
          <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" },
