--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,6 +13,14 @@ body {
 
 /* NAVBAR */
 
+.navbar-brand {
+  color: #fff !important;
+  letter-spacing: -1px;
+  text-transform: uppercase;
+  font-size: 1.3em;
+  font-weight: bold;
+}
+
 /* JUMBOTRON */
 
 .jumbotron {
