Add restrictions via UI

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,6 @@
     <div class="container-fluid">
     <h1>Welcome to Alphablog</h1>
     <p>The place where the world meets</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign up</a></p>
+    <p><%= link_to "Sign up", signup_path, class:"btn btn-primary btn-lg" %></p>
   </div>
 </div>
