--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center"><%= @article.title %></h1>
+<h2 align="center">Title: <%= @article.title %></h2>
 
 <div class="row">
  <div class="container">
