--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -3,8 +3,8 @@
     <% if obj.errors.any? %>
     <div class="panel panel-danger">
       <div class="panel-heading">
+        <h2 class="panel-title"><%= pluralize(obj.errors.count, "error") %> prevented the article from being saved:</h2>
         <div class="panel-body">
-          <h3><%= pluralize(obj.errors.count, "error") %> prevented the article from being saved:</h3>
             <ul>
               <% obj.errors.full_messages.each do |msg| %>
                 <li><%= msg %></li>
