--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,3 @@
 <h1 align="center">All articles</h1>
 
-<div class="row">
-  <div class="container">
-    <div class="col-md-8 col-md-offset-2">
-    <% @articles.each do |article| %>
-     <div class="well">
-       <h3><%= link_to article.title, article_path(article) %></h3>
-       <p class="lead"><%= truncate(article.description, length: 100) %></p>
-       <div class="article-meta-details">
-         <small>Created by: <%= article.user.username if article.user %>
-          about <%= time_ago_in_words(article.created_at) %> ago,
-         last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
-       </div>
-       <div class="article-actions">
-         <p><%= link_to "Edit", edit_article_path(article), class:"btn btn-primary btn-xs" %>
-         <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" },
-         class:"btn btn-danger btn-xs" %>
-       </div>
-     </div>
-     <% end %>
-   </div>
-  </div>
-</div>
+<%= render 'article', obj: @articles %>
