--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,6 +38,15 @@ body {
   padding-top: 10px;
 }
 
+.badge {
+  background-color: #cef6f5;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.input_checkbox input {
+  width: auto !important;
+}
 /* FOOTER */
 
 footer {
