--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,13 +5,16 @@
      <div class="well">
        <h3><%= link_to article.title, article_path(article) %></h3>
        <p class="lead"><%= truncate(article.description, length: 100) %></p>
+        <% if article.categories.any? %>
+          <p> Categories: <%= render article.categories %></p>
+        <% end %>
+         <% if logged_in? && (current_user == article.user || current_user.admin?) %>
          <div class="article-actions">
-           <% if logged_in? && (current_user == article.user || current_user.admin?) %>
            <p><%= link_to "Edit", edit_article_path(article), class:"btn btn-primary btn-xs" %>
            <%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" },
            class:"btn btn-danger btn-xs" %>
-          <% end %>
          </div>
+        <% end %>
      </div>
      <% end %>
    </div>
