--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,6 +10,9 @@
           about <%= time_ago_in_words(@article.created_at) %> ago,
          last updated: <%= time_ago_in_words(@article.updated_at) %> ago</small>
        </div>
+       <% if @article.categories.any? %>
+         <p>Categories: <%= render @article.categories %></p>
+       <% end %>
        <div class="article-actions">
          <% if logged_in? && (current_user == @article.user || current_user.admin? ) %>
          <p><%= link_to "Edit", edit_article_path(@article), class:"btn btn-primary btn-xs" %>
