--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,6 +23,10 @@ body {
 
 /* JUMBOTRON */
 
+.listing {
+  list-style: none;
+}
+
 .jumbotron {
   background-image: url('bg.png');
   background-size: cover;
